# miniGL

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: FindAssimp.cmake  FindGLFW3.cmake  FindImageMagick.cmake
documentation/: Doxyfile_Core.in  mainpage.md
documentation/css/: doxygenHtmlStyle.css
resources/: box.mtl  buddha.mtl  quad.mtl  quad2.mtl  spider.mtl
resources/Shaders/: Billboard.frag  Billboard.geom  Billboard.vert  CascadedShadowMapDirectionalLightLighting.frag  CascadedShadowMapDirectionalLightLighting.vert  Debug.frag  Debug.vert  DirectionalLightPass.frag  GLFXLighting.glsl  GeometryPass.frag  GeometryPass.vert  InstancedLighting.frag  InstancedLighting.vert  LightPass.vert  Lighting.frag  Lighting.vert  MotionBlur.frag  MotionBlur.vert  MultipassShadowMap.frag  MultipassShadowMap.vert  MultipassShadowMapLighting.frag  MultipassShadowMapLighting.vert  ParticleUpdate.geom  ParticleUpdate.vert  Picking.frag  Picking.vert  PointLightPass.frag  SSAO.frag  SSAO.vert  SSAOBlur.frag  SSAOBlur.vert  SSAOLighting.frag  SSAOLighting.vert  ShadowMap.frag  ShadowMap.vert  ShadowMapDirectionalLight.vert  ShadowMapDirectionalLightLighting.frag  ShadowMapDirectionalLightLighting.vert  ShadowVolume.geom  ShadowVolume.vert  (+18 more)
src/: Algebra.hpp  Angle.hpp  AntTweakBarWrapper.cpp  AntTweakBarWrapper.hpp  Application.cpp  Application.hpp  BackendGLFW.cpp  BackendGLFW.hpp  BackendGLUT.cpp  BackendGLUT.hpp  BaseBackend.cpp  BaseBackend.hpp  BaseLight.cpp  BaseLight.hpp  Billboard.cpp  Billboard.hpp  BillboardList.cpp  BillboardList.hpp  CallbacksInterface.cpp  CallbacksInterface.hpp  CallbacksRender.cpp  CallbacksRender.hpp  Camera.cpp  Camera.hpp  CascadedShadowMapDirectionalLight.cpp  CascadedShadowMapDirectionalLight.hpp  CascadedShadowMapDirectionalLightLighting.cpp  CascadedShadowMapDirectionalLightLighting.hpp  CascadedShadowMapDirectionalLightTechnique.cpp  CascadedShadowMapDirectionalLightTechnique.hpp  CascadedShadowMapFBO.cpp  CascadedShadowMapFBO.hpp  Constants.cpp  Constants.hpp  CubemapTexture.cpp  CubemapTexture.hpp  DebugRender.cpp  DebugRender.hpp  DeferredShadingDirectionalLightPass.cpp  DeferredShadingDirectionalLightPass.hpp  (+160 more)
test/: CMakeLists.txt
test/unit test/: Degree.test.cpp  Matrix4x4.test.cpp  Quaternion.test.cpp  Radian.test.cpp  UnitTestHelperFunctions.cpp  UnitTestHelperFunctions.hpp  Vector2.test.cpp  Vector3.test.cpp  Vector4.test.cpp
